src/bindings.rs

extern "C" {
    pub fn OodleLZ_CompressionLevel_GetName(
        compressSelect: OodleLZ_CompressionLevel,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OodleLZ_Compressor_GetName(
        compressor: OodleLZ_Compressor,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OodleLZ_Jobify_GetName(jobify: OodleLZ_Jobify) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OodleLZ_CompressOptions_GetDefault(
        compressor: OodleLZ_Compressor,
        lzLevel: OodleLZ_CompressionLevel,
    ) -> *const OodleLZ_CompressOptions;
}
extern "C" {
    pub fn OodleLZ_CompressOptions_Validate(pOptions: *mut OodleLZ_CompressOptions);
}
pub const OodleLZ_CompressScratchMemBoundType_OodleLZ_CompressScratchMemBoundType_WorstCase:
    OodleLZ_CompressScratchMemBoundType = 0;
pub const OodleLZ_CompressScratchMemBoundType_OodleLZ_CompressScratchMemBoundType_Typical:
    OodleLZ_CompressScratchMemBoundType = 1;
pub const OodleLZ_CompressScratchMemBoundType_OodleLZ_CompressScratchMemBoundType_Force32:
    OodleLZ_CompressScratchMemBoundType = 1073741824;
pub type OodleLZ_CompressScratchMemBoundType = ::std::os::raw::c_uint;
extern "C" {
    pub fn OodleLZ_GetCompressScratchMemBound(
        compressor: OodleLZ_Compressor,
        level: OodleLZ_CompressionLevel,
        rawLen: OO_SINTa,
        pOptions: *const OodleLZ_CompressOptions,
    ) -> OO_SINTa;
}
extern "C" {
    pub fn OodleLZ_GetCompressScratchMemBoundEx(
        compressor: OodleLZ_Compressor,
        level: OodleLZ_CompressionLevel,
        boundType: OodleLZ_CompressScratchMemBoundType,
        rawLen: OO_SINTa,
        pOptions: *const OodleLZ_CompressOptions,
    ) -> OO_SINTa;
}
extern "C" {
    pub fn OodleLZ_GetCompressedBufferSizeNeeded(
        compressor: OodleLZ_Compressor,
        rawSize: OO_SINTa,
    ) -> OO_SINTa;
}
extern "C" {
    pub fn OodleLZ_GetDecodeBufferSize(
        compressor: OodleLZ_Compressor,
        rawSize: OO_SINTa,
        corruptionPossible: OO_BOOL,
    ) -> OO_SINTa;
}
extern "C" {
    pub fn OodleLZ_GetInPlaceDecodeBufferSize(
        compressor: OodleLZ_Compressor,
        compLen: OO_SINTa,
        rawLen: OO_SINTa,
    ) -> OO_SINTa;
}
extern "C" {
    pub fn OodleLZ_GetCompressedStepForRawStep(
        compPtr: *const ::std::os::raw::c_void,
        compAvail: OO_SINTa,
        startRawPos: OO_SINTa,
        rawSeekBytes: OO_SINTa,
        pEndRawPos: *mut OO_SINTa,
        pIndependent: *mut OO_BOOL,
    ) -> OO_SINTa;
}
extern "C" {
    pub fn OodleLZ_GetAllChunksCompressor(
        compBuf: *const ::std::os::raw::c_void,
        compBufSize: OO_SINTa,
        rawLen: OO_SINTa,
    ) -> OodleLZ_Compressor;
}
extern "C" {
    pub fn OodleLZ_GetFirstChunkCompressor(
        compChunkPtr: *const ::std::os::raw::c_void,
        compBufAvail: OO_SINTa,
        pIndependent: *mut OO_BOOL,
    ) -> OodleLZ_Compressor;
}
extern "C" {
    pub fn OodleLZ_GetChunkCompressor(
        compChunkPtr: *const ::std::os::raw::c_void,
        compBufAvail: OO_SINTa,
        pIndependent: *mut OO_BOOL,
    ) -> OodleLZ_Compressor;
}
extern "C" {
    pub fn Oodle_CheckVersion(
        oodle_header_version: OO_U32,
        pOodleLibVersion: *mut OO_U32,
    ) -> OO_BOOL;
}
extern "C" {
    pub fn Oodle_LogHeader();
}
